--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -24,6 +24,7 @@
                 <td>{{ utilisateur.nom }}</td>
                 <td>{{ utilisateur.age }}</td>
                 <td>{{ utilisateur.email }}</td>
+                <td>{{ utilisateur.email }}</td>
                 <td>
                     <a href="{{ path('app_utilisateur_show', {'id': utilisateur.id}) }}">show</a>
                     <a href="{{ path('app_utilisateur_edit', {'id': utilisateur.id}) }}">edit</a>
