--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <header>
             {# Création d'une variable sur twig #}
-            {% set menu = ["Accueil","Blog","Contact","A propos","Ajouter Article","Liste Article", "Connection"]  %}
+            {% set menu = ["Accueil","Blog","Contact","A propos","Ajouter Article","Liste Article", "Login"]  %}
 
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
